# open-prompt-visibility

./: .env.example  .gitignore  CONFIG.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  IMPLEMENTATION_BRIEF_AIVisibilityTracker.md  IMPLEMENTATION_STATUS.md  README.md  launch_dashboard.sh  main.py  pyproject.toml  requirements.txt  results.csv  start_dashboard.sh  test-dashboard.sh  test_api.py
configs/: default.yaml
configs/prompts/: brand.yaml  custom.yaml  topic.yaml
configs/tool/: config.yaml
configs/users/: brands.yaml  prompts.yaml
data/: tracks.db
frontend/: .gitignore  package-lock.json  start-dev.sh
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/data/: route.ts
frontend/src/app/components/: CompetitorComparisonChart.tsx  PromptTable.tsx  QuickStats.tsx  RunHistoryPanel.tsx  VisibilityScoreCard.tsx  dashboard.tsx
frontend/src/app/prompts/: page.tsx
frontend/src/lib/: api.ts  schemas.ts
src/: __init__.py  analyzer.py  cost.py  dashboard.py  models.py  prompt_compiler.py  prompt_generator.py  storage.py  tracker.py
src/api/: __init__.py  prompts.py
tests/: __init__.py  test_adaptive_sampling.py  test_analytics_engine.py  test_analyzer.py  test_api.py  test_cli.py  test_cli_extended.py  test_cost.py  test_models.py  test_prompt_compiler.py  test_prompt_generator.py  test_run_lifecycle.py  test_sampler_state.py  test_sentiment.py  test_storage.py  test_suspend_resume.py  test_tracker.py
