[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-visibility-tracker"
version = "0.3.0"
description = "Track and analyze brand visibility in LLM responses with statistical significance testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Shaun"}
]
keywords = ["llm", "brand-tracking", "ai", "visibility", "analytics", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "rich-click>=1.7.0",
    "pyyaml>=6.0",
    "ollama>=0.2.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.5",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
pvt = "main:cli"

[project.urls]
Homepage = "https://github.com/ShaunM89/open-prompt-visibility"
Issues = "https://github.com/ShaunM89/open-prompt-visibility/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
